feat(NotificationService): implement the mail notification functionality

--- a/NotificationService/src/templates/mailer/welcome.hbs
+++ b/NotificationService/src/templates/mailer/welcome.hbs
@@ -1,7 +1,8 @@
 Hi {{name}},
 
 Welecome to {{appName}}
-We are excited to have you on board,
+I am glad that you tried my project demo thank you !,
 
-Thanks for joining us!
+Thanks for Exploring My projects!
+
 Best Regards!
